# edu-works

./: .gitignore  README.md
alg/1practical/: MathFunctions.py  (+3 more)
assembler/: 1practical.ASM
data analysis/: Practice5_AMakarov.html
neurons/: lab1.ipynb
system programming/4practical/: INSTALL.md  Makefile  Makefile.am  README.md  USING.md  archipelagos  config.h  config.h.in  config.status  configure  configure.in  main.c  struct.c  struct.h
system programming/4practical/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
system programming/4practical/html/: annotated.html  classes.html  files.html  globals.html  globals_func.html  main_8c.html  main_8c__incl.dot  md_INSTALL.html  md_README.html  md_USING.html  pages.html  struct_8c.html  struct_8c__incl.dot  struct_8h.html  struct_8h__incl.dot  struct_8h_source.html  structarchipelago-members.html  structarchipelago.html
system programming/4practical/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
system programming/4practical/latex/: Makefile  annotated.tex  main_8c.tex  main_8c.tex.tmp  main_8c__incl.dot  md_INSTALL.tex  md_README.tex  refman.tex  struct_8c.tex  struct_8c__incl.dot  struct_8h.tex  struct_8h__dep__incl.dot  struct_8h__incl.dot  structarchipelago.tex
(+313 files in other folders)
